Added <kbd> tags to quick start guide

--- a/help/templates/quick_start_guide.html
+++ b/help/templates/quick_start_guide.html
@@ -17,14 +17,14 @@
     </div>
     <div class="panel-body">
       <p>eConvenor refers to people involved in your group as "participants".</p>
-      <p>Add your group's participants by going to <i>Participants > New participant</i></p>
+      <p>Add your group's participants by going to <kbd>Participants > New participant</kbd></p>
     </div>
     <div class="panel-heading">
 	  <i class="fa fa-chevron-circle-right fa-fw fa-lg"></i>&nbsp;
       Step 2:&nbsp; Create an agenda for your next meeting
     </div>
     <div class="panel-body">
-      <p>Set up and distribute an agenda for your next meeting by going to <i>Meetings > New meeting</i> and following the prompts.</p>
+      <p>Set up and distribute an agenda for your next meeting by going to <kbd>Meetings > New meeting</kbd> and following the prompts.</p>
       <p>Give each agenda item a time limit and eConvenor will calculate your meeting's end time.</p>
     </div>
     <div class="panel-heading">
@@ -33,16 +33,16 @@
     </div>
     <div class="panel-body">
       <p>Save time by minuting your next meeting with eConvenor during the meeting.</p>
-      <p>Go to <i>Meetings > Current meetings</i> and click the <i>Work on minutes</i> button belonging to the meeting.</p>
-      <p>When you make a decision, click the <i>Add decision</i> button. When you assign a task to someone, click the <i>Add task</i> button.</p>
+      <p>Go to <kbd>Meetings > Current meetings</kbd> and click the <kbd>Work on minutes</kbd> button belonging to the meeting.</p>
+      <p>When you make a decision, click the <kbd>Add decision</kbd> button. When you assign a task to someone, click the <kbd>Add task</kbd> button.</p>
     </div>
     <div class="panel-heading">
 	  <i class="fa fa-chevron-circle-right fa-fw fa-lg"></i>&nbsp;
       Step 4:&nbsp; Coordinate your group's tasks
     </div>
     <div class="panel-body">
-      <p>Go to <i>Tasks > Manage tasks</i> to see and manage the tasks assigned to your group's participants.</p>
-      <p>Assign a new task to someone at any time by going to <i>Tasks > New task</i>.</p>
+      <p>Go to <kbd>Tasks > Manage tasks</kbd> to see and manage the tasks assigned to your group's participants.</p>
+      <p>Assign a new task to someone at any time by going to <kbd>Tasks > New task</kbd>.</p>
     </div>
     <div class="panel-heading">
 	  <i class="fa fa-chevron-circle-right fa-fw fa-lg"></i>&nbsp;
@@ -50,7 +50,7 @@
     </div>
     <div class="panel-body">
       <p>That's all there is to it! Now just repeat steps 2, 3 and 4 for each meeting.</p>
-      <p>For more details, see the <i>User guide</i> under the <i>Help</i> menu.</p>
+      <p>For more details, see the <kbd>User guide</kbd> under the <kbd>Help</kbd> menu.</p>
     </div><!-- /.panel-body -->
   </div><!-- /.panel -->  
 </div><!-- /.col -->
