--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -85,6 +85,13 @@ label.error {
   color: #ff0066;
 }
 
+kbd {
+  font-size: 80%;
+  background-color: #ff0066;
+  padding: 2px 6px 1px 6px;
+  box-shadow: none;
+}
+
 
 /* BODY
 -------------------------------------------------- */
