--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -192,12 +192,16 @@
         </thead>
         <tbody> 
           <tr>
+            <td>Forgotten passwords can now we reset automatically from eConvenor's login page.</td>
+            <td>21 Dec 2014</td>
+          </tr>
+          <tr>
             <td>"Add task" and "Add decision" buttons are now highlighted when a minutes item's notes are being entered.</td>
-            <td>30 July 2014</td>
+            <td>30 Jul 2014</td>
           </tr>
           <tr>
             <td>Added 8 extra pages to the eConvenor website. Navigate to them through the footer at www.econvenor.org.</td>
-            <td>03 July 2014</td>
+            <td>03 Jul 2014</td>
           </tr>
           <tr>
             <td>Revamped the front page of the website and added screenshots.</td>
@@ -249,20 +253,20 @@
         </thead>
         <tbody> 
           <tr>
-            <td>Allow the creation of reusable, customisable agenda templates.</td>
-            <td>Sept/Oct 2014</td>
+            <td>Increase character limits for some fields (<a href="https://trac.econvenor.org/ticket/45" target="_blank">Ticket #45</a>).</td>
+            <td>Dec 2014</td>
           </tr>
           <tr>
-            <td>Allow a message to be added to agenda/minutes covering emails.</td>
-            <td>Sept/Oct 2014</td>
+            <td>Allow the creation of reusable agenda templates (<a href="https://trac.econvenor.org/ticket/51" target="_blank">Ticket #51</a>).</td>
+            <td>Jan 2015</td>
           </tr>
           <tr>
-            <td>Remove character limit for "notes" text in minutes.</td>
-            <td>Sept/Oct 2014</td>
+            <td>Enable a message to be added to agenda/minutes covering emails (<a href="https://trac.econvenor.org/ticket/52" target="_blank">Ticket #52</a>).</td>
+            <td>Jan 2015</td>
           </tr>
           <tr>
-            <td>Enable addition of group logo to agendas/minutes.</td>
-            <td>Sept/Oct 2014</td>
+            <td>Enable addition of group logo to agendas/minutes (<a href="https://trac.econvenor.org/ticket/41" target="_blank">Ticket #41</a>).</td>
+            <td>Jan 2015</td>
           </tr>
         </tbody>
       </table>
