Added activity statistics to admin dashboard

--- a/dashboard/templates/dashboard_admin.html
+++ b/dashboard/templates/dashboard_admin.html
@@ -91,7 +91,14 @@
       <tbody>
         <tr>
           <td>Number of accounts</td>
-          <td>{{ total_free_accounts }} free &nbsp;/&nbsp; {{ total_trial_accounts }} trial &nbsp;/&nbsp; {{ total_paid_accounts }} paid &nbsp;/&nbsp; {{ total_accounts }} in total</td>
+          <td>
+            {{ total_free_accounts }} free &nbsp;/&nbsp;
+            {{ total_trial_accounts }} trial &nbsp;/&nbsp;
+            {{ total_paid_accounts }} paid &nbsp;/&nbsp;
+            {{ total_accounts }} in total &nbsp;/&nbsp;
+            {{ total_active_in_last_week }} active in last week &nbsp;/&nbsp;
+            {{ total_active_in_last_month }} active in last month
+          </td>
         </tr>
         <tr>
           <td>Number of participants</td>
