Added page for monthly hack day to landing site

--- a/landing/templates/landing_base.html
+++ b/landing/templates/landing_base.html
@@ -67,6 +67,7 @@
           <div class="col-xs-3">
             <p class="lead">Contribute</p>      
             <p><a href={% url 'volunteer' %}>Work on eConvenor</a></p>
+            <p><a href={% url 'hack' %}>Monthly hack day</a></p>
             <p><a href={% url 'donate' %}>Donate money</a></p>
             <p><a href={% url 'pricing' %}>Unions & political parties</a></p>
           </div><!-- /.col -->
