--- a/landing/templates/volunteer.html
+++ b/landing/templates/volunteer.html
@@ -150,7 +150,8 @@
             </ul>
             <h2 class="red">Sound okay?</h2>
             <p>If this sounds like it's up your alley, <a href={% url 'contact' %}>let us know</a>.</p>
-            <p> Note that Convenor is a volunteer organisation and doesn't have paid jobs.</p>
+            <p>If you're in Melbourne, Australia, you can come and <a href={% url 'hack' %}>hack with us each month</a>.</p>
+            <p>Note that Convenor is a volunteer organisation and doesn't have paid jobs.</p>
           </div><!-- /.col --> 
         </div><!-- /.row -->
       </div><!-- /.container -->
