Added Github account reference to hack page on landing site

--- a/landing/templates/hack.html
+++ b/landing/templates/hack.html
@@ -27,10 +27,11 @@
             <p>From 10:00am to 5:30pm we work on eConvenor at 8 Studley Street, Abbotsford.</p>
             <p>From 6:00pm we relax and dine at Loving Hut, 10/242 Victoria St, Richmond.</p>
             <h2 class="red">What to bring</h2>
-            <p>All you need to bring is your computer.</p>
-            <p>We'll supply lunch and snacks throughout the day. It will help us
-            cater if you <a
-            href="mailto:mail@econvenor.org?subject=RSVP+for+hack+day">let us know you're coming</a>.</p>
+            <p>All you need to bring is your computer. Having a
+              <a href="https://github.com" target="_blank">Github account</a>
+              would also be handy.</p>
+            <p>We'll supply lunch and snacks throughout the day. It will help us cater if you
+              <a href="mailto:mail@econvenor.org?subject=RSVP+for+hack+day">let us know you're coming</a>.</p>
             <h2 class="red">There's something for everyone to do</h2>
             <p class="lead">Back end (Django/Python) tasks:</p>
             <ul class="fa-ul">
