Edited hack page

--- a/landing/templates/hack.html
+++ b/landing/templates/hack.html
@@ -45,6 +45,10 @@
               </li>
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
+                Allow participants to mark tasks as completed without logging in (<a href="https://trac.econvenor.org/ticket/53" target="_blank">Ticket #53</a>)
+              </li>
+              <li>
+                <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
                 Enable a message to be added to agenda/minutes covering emails (<a href="https://trac.econvenor.org/ticket/52" target="_blank">Ticket #52</a>)
               </li>
               <li>
