Edited hack page

--- a/landing/templates/hack.html
+++ b/landing/templates/hack.html
@@ -24,7 +24,7 @@
           <div class="col-md-10">
             <h2 class="red">Where and when</h2>
             <p>The next eConvenor hack day is <span class="red">Saturday February 7th, 2015</span> in Melbourne, Australia.</p>
-            <p>From 10:00am to 5:30pm we work on eConvenor at 8 Studley Street, Abbotsford.</p>
+            <p>From 10:00am to 5:30pm we work on eConvenor at 8 Studley Street, Abbotsford. Thanks to <span class="red">Common Code</span> for making their space available for us to use.</p>
             <p>From 6:00pm we relax and dine at Loving Hut, 10/242 Victoria St, Richmond.</p>
             <h2 class="red">What to bring</h2>
             <p>All you need to bring is your computer. Having a
