Fix for #53 (Task completion via email)

--- a/utilities/management/commands/templates/email_reminder_participant.html
+++ b/utilities/management/commands/templates/email_reminder_participant.html
@@ -92,7 +92,8 @@
   </tr>
   <tr>
     <td class="bodycopy bodypadding" bgcolor="#ffffff" style="padding: 0 30px 30px 30px;font-family: sans-serif;font-size: 16px;line-height: 22px;text-align: left;color: #444444;">   
-      To report tasks in this message as complete, email <a href="mailto:{{ convenor_email }}" style="color: #ff0066;text-decoration: none;">{{ convenor_name }}</a>.
+	    You may view and update your tasks at the following page (link expires after {{ expiry_days }} days):<br />
+	<a href="{{ participant_task_url }}">{{ participant_task_url }}</a>
     </td>
   </tr>
   <tr>
