Updated hack page and temporarily removed ribbon from landing site

--- a/landing/templates/landing_base.html
+++ b/landing/templates/landing_base.html
@@ -45,16 +45,18 @@
       </div>
     </div>
 
+    {% comment %}
     <!-- RIBBON
     ================================================== -->
     <div class="ribbon">
       <div class="container">
         <div class="message-container">
           <i class="fa fa-map-marker fa-lg"></i>&nbsp;&nbsp;
-          Are you in Melbourne, Australia?&nbsp;&nbsp;Come and <a href={% url 'hack' %}>hack on eConvenor with us</a> on Saturday 7th February 2015!
+          Are you in Melbourne, Australia?&nbsp;&nbsp;Come and <a href={% url 'hack' %}>hack on eConvenor with us</a> on Saturday 14th March 2015!
         </div>
       </div>
     </div>
+    {% endcomment %}
 
     {% block content %}
     {% endblock content %}
