Added links to code of conduct, added former hack days, updated landing page.

--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -160,6 +160,7 @@
             <ul class="fa-ul">
               <li><i class="fa-li fa fa-search-plus fa-lg red"></i>Collects and tracks tasks assigned in meetings</li>
               <li><i class="fa-li fa fa-tags fa-lg red"></i>Emails reminders to people when their tasks are nearly due, and again if they become overdue</li>
+              <li><i class="fa-li fa fa-check fa-lg red"></i>Participants can manage their own tasks, without logging in.</li> 
               <li><i class="fa-li fa fa-plus-circle fa-lg red"></i>Tasks can be added any time</li>
               <li><i class="fa-li fa fa-list fa-lg red"></i>Lists of outstanding, overdue and completed tasks appear in agendas and minutes</li>
               <li><i class="fa-li fa fa-star fa-lg red"></i>eConvenor handles the often-awkward job of reminding people about their tasks for you</li>
@@ -230,7 +231,7 @@
               <!-- Left column item 2 -->
               <li><i class="fa-li fa fa-check-circle fa-3x red"></i>
                 <ul>
-                  <li><p class="lead red">A domestic violence crisis service in the UK</p></li>
+                  <li><p class="lead red">A family violence crisis service in the UK</p></li>
                   <li><p>which is run by 7 staff, who help 300 women every year. They have a volunteer board of directors.</p></li>
                 </ul>
               </li>
