--- a/landing/templates/volunteer.html
+++ b/landing/templates/volunteer.html
@@ -23,7 +23,7 @@
         <div class="row">
           <div class="col-md-10">
             <h2 class="red">Why you might love working on eConvenor</h2>
-            <p>Click an item to expand it.</p>
+            <p>Click on the titles or the plus signs below to expand the section.</p>
             <ul class="fa-ul">
               <li>
                 <div class="faq-title">
@@ -49,7 +49,7 @@
                   <p class="lead">All genders welcome</p>
                 </div>
                 <div class="faq-body">
-                  <p>eConvenor is not another technology project with a culture of oblivious, unquestioning masculinity. We oppose all forms of oppression, including &mdash; of course &mdash; oppression based on gender. eConvenor welcomes people of all genders with respect and without prejudice.</p>
+                  <p>eConvenor is not another technology project with a culture of oblivious, unquestioning masculinity. We oppose all forms of oppression, including &mdash; of course &mdash; oppression based on gender. eConvenor welcomes people of all genders with respect and without prejudice. We have a <a href="{% url 'conduct' %}">code of conduct</a> in place to ensure the talk gets walked.</p>
                 </div>
               </li>
               <li>
@@ -90,7 +90,7 @@
               </li>
             </ul> 
             <h2 class="red">The sort of people we're looking for</h2>
-            <p>Click an item to expand it.</p>
+            <p>Click on the titles or the plus signs below to expand the section</p>
             <ul class="fa-ul">
               <li>
                 <div class="faq-title">
@@ -134,7 +134,7 @@
                   <p class="lead">Good politics</p>
                 </div>
                 <div class="faq-body">
-                  <p>The eConvenor project rests on a foundation of opposition to all forms of oppression. We just call this "good politics". You must have good politics to work on eConvenor with us.</p>
+                  <p>The eConvenor project rests on a foundation of opposition to all forms of oppression. We just call this "good politics". You must have good politics to work on eConvenor with us, and follow our <a href="{% url 'conduct' %}">code of conduct</a>.</p>
                 </div>
               </li>
               <li>
