--- a/utilities/management/commands/templates/email_reminder_participant.html
+++ b/utilities/management/commands/templates/email_reminder_participant.html
@@ -92,8 +92,8 @@
   </tr>
   <tr>
     <td class="bodycopy bodypadding" bgcolor="#ffffff" style="padding: 0 30px 30px 30px;font-family: sans-serif;font-size: 16px;line-height: 22px;text-align: left;color: #444444;">   
-	    You may view and update your tasks at the following page (link expires after {{ expiry_days }} days):<br />
-	<a href="{{ participant_task_url }}">{{ participant_task_url }}</a>
+	  You can mark any of your tasks as completed at this link (which expires after {{ expiry_days }} days):<br />
+	  <a href="{{ participant_task_url }}" style="color: #ff0066;text-decoration: none;">{{ participant_task_url }}</a>
     </td>
   </tr>
   <tr>
