--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -192,6 +192,14 @@
         </thead>
         <tbody> 
           <tr>
+            <td>
+              <span class="red">
+                <i class="fa fa-certificate fa-fw"></i>&nbsp;NEW FEATURE!
+              </span>
+              Participants can now mark their own tasks as completed by clicking a link in their reminder email.</td>
+            <td>01 Mar 2015</td>
+          </tr>
+          <tr>
             <td>Forgotten passwords can now we reset automatically from eConvenor's login page.</td>
             <td>21 Dec 2014</td>
           </tr>
@@ -254,19 +262,19 @@
         <tbody> 
           <tr>
             <td>Increase character limits for some fields (<a href="https://trac.econvenor.org/ticket/45" target="_blank">Ticket #45</a>).</td>
-            <td>Dec 2014</td>
+            <td>Mar 2015</td>
           </tr>
           <tr>
             <td>Allow the creation of reusable agenda templates (<a href="https://trac.econvenor.org/ticket/51" target="_blank">Ticket #51</a>).</td>
-            <td>Jan 2015</td>
+            <td>Mar 2015</td>
           </tr>
           <tr>
             <td>Enable a message to be added to agenda/minutes covering emails (<a href="https://trac.econvenor.org/ticket/52" target="_blank">Ticket #52</a>).</td>
-            <td>Jan 2015</td>
+            <td>Mar 2015</td>
           </tr>
           <tr>
             <td>Enable addition of group logo to agendas/minutes (<a href="https://trac.econvenor.org/ticket/41" target="_blank">Ticket #41</a>).</td>
-            <td>Jan 2015</td>
+            <td>Mar 2015</td>
           </tr>
         </tbody>
       </table>
