Corrected SEO information on conduct page

--- a/landing/templates/conduct.html
+++ b/landing/templates/conduct.html
@@ -2,8 +2,8 @@
 {% load staticfiles %}
 
 {% block seo %}
-  <title>eConvenor  |  Hack with us each month!</title>
-  <meta name="description" content="Details of the monthly eConvenor hack day.">
+  <title>eConvenor  |  Community code of conduct</title>
+  <meta name="description" content="eConvenor's community code of conduct.">
 {% endblock seo %}
 
 {% block content %}
