Small edits and alterations to conduct and hack pages

--- a/landing/templates/conduct.html
+++ b/landing/templates/conduct.html
@@ -22,22 +22,22 @@
       <div class="container">
         <div class="row">
           <div class="col-md-10">
-            <h2 class="red">How we treat each other matters.</h2>
-            <p>We welcome the contributions of people of <span class=red>all</span> genders, cultures, races, colours, ages, sizes, sexualities, classes, and abilities.</p>
+            <h2 class="red">How we treat each other matters</h2>
+            <p>We welcome the contributions of people of all genders, cultures, races, colours, ages, sizes, sexualities, classes, and abilities.</p>
             <p>We will work pro-actively to make involvement in the eConvenor development community a welcoming, positive experience for everyone.</p>
             <p>To that end, there are some basic conditions of participation in the eConvenor project:</p>
             <ul class="fa-ul">
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
-                Make an effort to be polite and friendly to other members of the community. 
+                Make an effort to be polite and friendly to other members of our community.
               </li>
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
-                Be aware that tech groups can be intimidating and unwelcoming for people who aren't straight <a href="https://en.wikipedia.org/wiki/Cisgender">cisgender</a> men, and go out of your way to make sure the community isn't like that.
+                Be aware that tech groups can be intimidating and unwelcoming for people who aren't straight <a href="https://en.wikipedia.org/wiki/Cisgender" target="_blank">cisgender</a> men, and go out of your way to make sure our community isn't like that.
               </li>
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
-                Treat other members of the group with patience and respect, regardless of their level of technical ability. Everyone was a beginner once.
+                Treat other members of the community with patience and respect, regardless of their level of technical ability. Everyone was a beginner once.
               </li>
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
@@ -45,15 +45,15 @@
               </li>
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
-                Don't talk over anyone. If you must interrupt someone for some reason, that's okay, but do it politely and infrequently.
+                Don't talk over anyone. If you must interrupt someone for some reason, that's okay, but do it politely and don't make a habit of it.
               </li>
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
-                Say something if you witness inappropriate conduct within our community. Either speak up a the time, or let Keira and Sky know so that they can deal with it.
+                Say something if you witness inappropriate conduct within our community. Either speak up at the time, or let Keira and Sky know so that they can deal with it.
               </li>
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
-                If someone asks you to change your behaviour, or points out a problem with it, take it on board. Listen first, then think, then respond - avoid reacting without thinking.
+                If someone asks you to change your behaviour, or points out a problem with it, take it on board. Listen first, then think, then respond &mdash; avoid reacting without thinking.
               </li>
             </ul>
           </div><!-- /.col -->
