--- a/landing/templates/hack.html
+++ b/landing/templates/hack.html
@@ -36,7 +36,7 @@
             <p>We are committed to ending oppression, and a tiny part of that is making our space safer for all.</p>
             <p>Please read our <a href="{% url 'conduct' %}">code of conduct</a>. Everyone is expected to abide by it.</p>
             <h2 class="red">There's something for everyone to do</h2>
-            <p class="lead">Back end (Django/Python) tasks:</p>
+            <p class="lead">Back end (Django/Python) tasks</p>
             <ul class="fa-ul">
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
@@ -59,7 +59,7 @@
                 Configuring <a href="http://sphinx-doc.org/index.html" target="_blank">Sphinx</a> for documentation generation
               </li>
             </ul>
-            <p class="lead">Front end (HTML/CSS/JS) tasks:</p>
+            <p class="lead">Front end (HTML/CSS/JS) tasks</p>
             <ul class="fa-ul">
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
@@ -74,21 +74,21 @@
                 At least one recipient must be selected for document distribution (<a href="https://trac.econvenor.org/ticket/12" target="_blank">Ticket #12</a>)
               </li>
             </ul>
-            <p class="lead">SEO:</p>
+            <p class="lead">SEO</p>
             <ul class="fa-ul">
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
                 Improve eConvenor's seach engine rankings
               </li>
             </ul>
-            <p class="lead">Design:</p>
+            <p class="lead">Design</p>
             <ul class="fa-ul">
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
                 Design new graphic elements for the landing site
               </li>
             </ul>
-            <p class="lead">Non-technical:</p>
+            <p class="lead">Non-technical</p>
             <ul class="fa-ul">
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
@@ -97,14 +97,14 @@
             </ul>
             <h2 class=red>Previous hack days</h2>
             <p class="lead">February 2015</p>
-            <p>Our first ever hack day saw us working on improving econvenor's emails and task functionality.</p>
-            <p>Tickets completed:</P>              
+            <p>Our first ever hack day saw us working on improving eConvenor's reminder emails and task functionality.</p>
+            <p>Tickets completed:</p>
             <ul class="fa-ul">
-                <li>
-                  <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
-                  Allow participants to mark tasks as completed without logging in (<a href="https://trac.econvenor.org/ticket/53" target="_blank">Ticket #53</a>).
-                  </li>
-             </ul>
+              <li>
+                <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
+                Allow participants to mark tasks as completed without logging in (<a href="https://trac.econvenor.org/ticket/53" target="_blank">Ticket #53</a>).
+              </li>
+            </ul>
 
           </div><!-- /.col -->
         </div><!-- /.row -->
