Fixed date display in bug view.

--- a/bugs/templates/bug_edit.html
+++ b/bugs/templates/bug_edit.html
@@ -62,7 +62,7 @@
     {{ bug.title }}
     <br><br>
     <p><strong>Date</strong></p>
-    {{ bug.date }}
+    {{ bug.created }}
     <br><br>
     <p><strong>Which page were you on?</strong></p>
     {{ bug.location }}
