Fixed date display in Feature view.

--- a/bugs/templates/feature_edit.html
+++ b/bugs/templates/feature_edit.html
@@ -64,7 +64,7 @@
     {{ feature.title }}
     <br><br>
     <p><strong>Date</strong></p>
-    {{ feature.date }}
+    {{ feature.created }}
     <br><br>
     <p><strong>What is it that you would like to do but can't?</strong></p>
     {{ feature.goal }}
