Finish hack March, ready for hack April.

--- a/landing/templates/hack.html
+++ b/landing/templates/hack.html
@@ -23,9 +23,12 @@
         <div class="row">
           <div class="col-md-10">
             <h2 class="red">Where and when</h2>
-            <p>The next eConvenor hack day is <span class="red">Saturday March 14th, 2015</span> in Melbourne, Australia.</p>
+            <p>The next eConvenor hack day is <span class="red">Saturday April 11th, 2015</span> in Melbourne, Australia.</p>
             <p>From 10:00am to 5:30pm we work on eConvenor at 8 Studley Street, Abbotsford. Thanks to <span class="red">Common Code</span> for making their space available for us to use.</p>
             <p>From 6:00pm we relax and dine at Loving Hut, 10/242 Victoria St, Richmond.</p>
+            <h2 class="red"> Accessibility</h2>
+            <p>The space has no front step, a slight ramp (15cms), a wide front doorway, and accessible toilets. Toilets have gendered signs, we treat them as genderless. The walkway on the street is narrow. There is parking out the front (no ramp), and public transport nearby.</p>
+            <p>Loving Hut in Richmond has no front step, standard-width door and generous space between tables. Not sure about the toilets.</p>
             <h2 class="red">What to bring</h2>
             <p>All you need to bring is your computer. Having a
               <a href="https://github.com" target="_blank">Github account</a>
@@ -96,6 +99,20 @@
               </li>
             </ul>
             <h2 class=red>Previous hack days</h2>
+            <p class="lead">March 2015</p>
+            <p>Our second hack day was all about helping our contributers set up, and front-end changes. Work began on changing the character counts to word counts, and making our email distribution smoother.</p>
+            <p>Tickets completed:</p>
+            <ul class="fa-ul">
+              <li>
+                <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
+                Spruce up the log in page.(<a href="https://trac.econvenor.org/ticket/13" target="_blank">Ticket #13</a>).
+              </li>
+              <li>
+                <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
+                Spruce up bug and feature report views(<a href="https://trac.econvenor.org/ticket/57" target="_blank">Ticket #57</a>).
+              </li>
+            </ul>
+                        
             <p class="lead">February 2015</p>
             <p>Our first ever hack day saw us working on improving eConvenor's reminder emails and task functionality.</p>
             <p>Tickets completed:</p>
