--- a/landing/templates/landing_base.html
+++ b/landing/templates/landing_base.html
@@ -45,6 +45,7 @@
       </div>
     </div>
 
+    {% comment %}
     <!-- RIBBON
     ================================================== -->
     <div class="ribbon">
@@ -55,6 +56,7 @@
         </div>
       </div>
     </div>
+    {% endcomment %}
 
     {% block content %}
     {% endblock content %}
