Updated landing again-added ticket 27

--- a/landing/templates/hack.html
+++ b/landing/templates/hack.html
@@ -28,7 +28,7 @@
             <p>From 6:00pm we relax and dine at Loving Hut, 10/242 Victoria St, Richmond.</p>
             <h2 class="red"> Accessibility</h2>
             <p>The space has no front step, a slight ramp (15cms), a wide front doorway, and accessible toilets. Toilets have gendered signs, we treat them as genderless. The walkway on the street is narrow. There is parking out the front (no ramp), and public transport nearby.</p>
-            <p>Loving Hut in Richmond has no front step, standard-width door and generous space between tables. Not sure about the toilets.</p>
+            <p>Loving Hut in Richmond has a 15cm-20cm front step, standard-width door and average space between tables. Toilet doors are very narrow.</p>
             <h2 class="red">What to bring</h2>
             <p>All you need to bring is your computer. Having a
               <a href="https://github.com" target="_blank">Github account</a>
@@ -110,6 +110,10 @@
               <li>
                 <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
                 Spruce up bug and feature report views(<a href="https://trac.econvenor.org/ticket/57" target="_blank">Ticket #57</a>).
+              </li>
+              <li>
+                <i class="fa fa-li fa-arrow-circle-right fa-lg red"></i>
+                Rename attachments and update agenda and minutes views(<a href="https://trac.econvenor.org/ticket/27" target="_blank">Ticket #27</a>).
               </li>
             </ul>
                         
